Minor styling fix, fixing divs jumping when text added

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -105,7 +105,7 @@ body {
   word-break: break-all;
   text-align: right;
   line-height: 30px;
-  min-height: 30px;
+  height: 30px;
   padding: 2px;
 }
 
